--- a/assets/base.css
+++ b/assets/base.css
@@ -15,6 +15,10 @@
   box-sizing: border-box;
 }
 
+html {
+  font-size: 62.5%;
+}
+
 body {
   font-family: var(--font-body-family) !important;
 }
@@ -352,22 +356,6 @@ table:not([class]) th {
 
 .light {
   opacity: 0.7;
-}
-
-a:empty,
-ul:empty,
-dl:empty,
-div:empty,
-section:empty,
-article:empty,
-p:empty,
-h1:empty,
-h2:empty,
-h3:empty,
-h4:empty,
-h5:empty,
-h6:empty {
-  display: none;
 }
 
 .link,
