--- a/assets/main-banner-hiring.css
+++ b/assets/main-banner-hiring.css
@@ -35,7 +35,7 @@
     position: absolute;
     top: 0px;
     z-index: 2;
-    padding: 15px;
+    padding: 0 1.5rem;
     color: var(--black);
 
     @media screen and (min-width: 768px) {
@@ -114,7 +114,7 @@
 
   /* Main button */
   .main-banner-hiring__button {
-    padding: 12px 24px;
+    padding: 1.3rem 2rem;
     background-color: var(--black);
     color: var(--white);
     text-decoration: none;
@@ -125,6 +125,7 @@
     overflow: hidden;
     white-space: nowrap;
     margin-bottom: 3.9rem;
+    height: 4.5rem;
 
     font-size: 1.6rem;
     font-weight: 400;
@@ -132,6 +133,7 @@
     @media screen and (min-width: 768px) {
       width: 22rem;
       margin-bottom: unset;
+      height: unset;
     }
 
     /* Hover effect background */
@@ -152,9 +154,20 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      gap: 2.98rem;
+      gap: 2rem;
       position: relative;
       z-index: 2;
+      height: 1.9rem;
+
+      @media screen and (min-width: 768px) {
+        height: unset;
+      }
+
+      :is(span) {
+        font-size: 1.6rem;
+        font-weight: 300;
+        line-height: 1.9rem;
+      }
     }
 
     /* SVG icon color */
