style: enhance layout and alignment

--- a/assets/main-banner-hiring.css
+++ b/assets/main-banner-hiring.css
@@ -134,6 +134,7 @@
       width: 22rem;
       margin-bottom: unset;
       height: unset;
+      padding: 1.4rem 2.4rem;
     }
 
     /* Hover effect background */
