--- a/sections/product-grid-hiring.liquid
+++ b/sections/product-grid-hiring.liquid
@@ -18,7 +18,7 @@
 
 <!-- Container: Product Grid Hiring -->
 <div class="product-grid-hiring__container">
-  {% if sec.title %}
+  {% if sec.title  != blank %}
     <h2>{{ sec.title }}</h2>
   {% endif %}
 
